# roome-server

./: .gitignore  Cargo.toml  Makefile  README.md  build-ffmpeg.sh  hook.c
src/: device.rs  device_socket.rs  io_server.rs  main.rs  ssdp.rs
src/api/: dlna.rs  mod.rs  play_online.rs
src/api/xml/: AVTransport.xml  ConnectionManager.xml  RenderingControl.xml  desc.xml
src/certs/: cert.pem  key.pem
