[package]
name = "roome-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "*"
log = { version = "0.4", features = ["release_max_level_info"]}
env_logger = "0.9.0"
bytes = "1.0.1"
xmltree = "0.10"
nix = "0.22.0"

# NTP
nippy = { version = "2", default-features = false, features = [
    "tokio-runtime",
] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/*
axum = "0.2.0"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "stream"] }
tokio-rustls = "0.22.0"
tower = "0.4.8"
tower-http = { version = "0.1.1", features = ["trace", "set-header"] }
http = "0.2"
tokio-ssdp = "0.1.0"
url = "2.2.2"


[profile.release]
lto = "fat"
